--- a/.github/workflows/scan-news.yml
+++ b/.github/workflows/scan-news.yml
@@ -2,7 +2,7 @@ name: Run Scanner
 
 on:
   schedule:
-    - cron: "0 */6 * * *"   # every 6 hours (change as needed)
+    - cron: "0 */24 * * *"   # every 24 hours (change as needed)
   workflow_dispatch:        # allows manual trigger from Actions tab
 
 permissions:
@@ -30,5 +30,18 @@ jobs:
       - name: Run scanner.py
         run: |
           python scanner.py
+
+      - name: Commit incidents.json and stats if changed
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@users.noreply.github.com"
+
+          if git status --porcelain | grep -E "incidents.json|sycophancy_incidents_2023_present_stats.txt"; then              git add incidents.json sycophancy_incidents_2023_present_stats.txt
+             git commit -m "Update incidents data from scanner"
+             git push
+          else
+            echo "No changes to incidents.json or stats"
+          fi
+
 
    
