--- a/.github/workflows/scan-news.yml
+++ b/.github/workflows/scan-news.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run scanner.py
         run: |
-          python scanner.py
+          python scanner.py --full-scan
 
       - name: Commit incidents.json and stats if changed
         run: |
